refactor : DDD / Layered를 지키도록 리팩터링